--- a/src/app/Components/show-images/show-images.component.html
+++ b/src/app/Components/show-images/show-images.component.html
@@ -1,1 +1,13 @@
-<p>show-images works!</p>
+<div class="container container_img">
+  <mat-card *ngFor="let img of imagesGalery; index as i;">
+    <mat-card-header>
+      <div mat-card-avatar class="example-header-image"></div>
+      <mat-card-title>Imagen {{i+1}}</mat-card-title>
+      <!--      <mat-card-subtitle>Dog Breed</mat-card-subtitle>-->
+    </mat-card-header>
+    <img mat-card-image src="https://th.bing.com/th/id/R.499a02ffd0fdf8182fd97bf9be75f37b?rik=n5tpggkQFThLsA&riu=http%3a%2f%2f2.bp.blogspot.com%2f-mUUYBfVxsTs%2fTlFvGGcMOFI%2fAAAAAAAALX8%2fhNRPScOP-6s%2fs1600%2fMatas-de-Coco_Palmeras_Beach-Palm-Tree_10.jpg&ehk=ROTjd5GMDlj5lKsemOkl7vq7Q6dyR%2f9VT9p2mhDbt30%3d&risl=&pid=ImgRaw&r=0" alt="Photo of a Shiba Inu">
+    <mat-card-content>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit</p>
+    </mat-card-content>
+  </mat-card>
+</div>
