--- a/src/app/Components/show-images/show-images.component.html
+++ b/src/app/Components/show-images/show-images.component.html
@@ -5,7 +5,7 @@
       <mat-card-title>Imagen {{i+1}}</mat-card-title>
       <!--      <mat-card-subtitle>Dog Breed</mat-card-subtitle>-->
     </mat-card-header>
-    <img mat-card-image src="https://th.bing.com/th/id/R.499a02ffd0fdf8182fd97bf9be75f37b?rik=n5tpggkQFThLsA&riu=http%3a%2f%2f2.bp.blogspot.com%2f-mUUYBfVxsTs%2fTlFvGGcMOFI%2fAAAAAAAALX8%2fhNRPScOP-6s%2fs1600%2fMatas-de-Coco_Palmeras_Beach-Palm-Tree_10.jpg&ehk=ROTjd5GMDlj5lKsemOkl7vq7Q6dyR%2f9VT9p2mhDbt30%3d&risl=&pid=ImgRaw&r=0" alt="Photo of a Shiba Inu">
+    <img mat-card-image  [src]="img">
     <mat-card-content>
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit</p>
     </mat-card-content>
