--- a/src/app/Components/dash-board/dash-board.component.css
+++ b/src/app/Components/dash-board/dash-board.component.css
@@ -3,6 +3,19 @@
   grid-template-columns: repeat(5, auto );
   grid-gap: 10px;
 }
+.buttonColor{
+  background-color: #2563BC;
+  color: white;
+}
+.formField{
+  width: 450px;
+}
+.matCardGenerator:hover{
+  background-color: #2B4865;
+  color: white;
+  cursor: pointer;
+  box-shadow: 1px 0px 12px #8FE3CF;
+}
 
 @media screen and (max-width: 640px) {
 
