--- a/src/app/Components/main-nav/main-nav.component.css
+++ b/src/app/Components/main-nav/main-nav.component.css
@@ -1,30 +1,56 @@
+
 .sidenav-container {
   height: 100%;
 }
-
 .sidenav{
   width: 250px;
+  /*background-color: #0096FF;*/
+  background-color: #acabab;
+  color: #fff;
 }
-
 .sidenav .mat-toolbar {
-  background: inherit;
-  background-color: #002B5B;
-  color: white;
+  /*background-color: #5800FF;*/
+  /*background: inherit;*/
+  /*box-shadow: 0 0 10px 0 rgb(0, 0, 0, 0.6);*/
 }
-
 .mat-toolbar.mat-primary {
-  background-color: #002B5B;
+  background-color: #14279B;
   position: sticky;
   top: 0;
   z-index: 1;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.6);
 }
 .webTitle{
-  background-color: #1363DF;
+  font-family: "Trebuchet MS",Verdana, SansSerif, Serif;
+  font-weight: bold;
+  font-size: 23px;
   border-radius: 5px;
   padding: 5px;
 }
-.iconTheme{
-
+.iconCSS{
+  color: white;
+}
+.iconCSS:hover{
+  background-color: #ffffff;
+  color: black;
+  border-radius: 0.375em;
+}
+.toolbarText{
+  font-size: 25px;
+}
+.imgBg{
+  width: 100%;
+  height: 100%;
+  border-radius: 7px;
+  z-index: 0;
+}
+.toolbar{
+  width: 100%;
+  height: 130px;
+}
+.toolbarHeader{
+  padding: 10px;
+  margin: 5px;
 }
 
 
