--- a/src/app/Components/show-images/show-images.component.css
+++ b/src/app/Components/show-images/show-images.component.css
@@ -1,6 +1,6 @@
 .container_img{
   display: grid;
-  grid-template-columns: repeat(5, auto);
+  grid-template-columns: repeat(4, auto);
   grid-gap: 20px;
 }
 @media screen and (max-width: 640px){
@@ -9,4 +9,8 @@
     flex-direction: column;
     justify-content: center;
   }
+}
+.imgCss{
+  width: 264px;
+  height: 200px;
 }
