--- a/src/app/Components/show-videos/show-videos.component.html
+++ b/src/app/Components/show-videos/show-videos.component.html
@@ -1,19 +1,21 @@
-<div class="container text-center"><h1>Galería de Videos</h1></div>
-<div class="container container_videos" style="border: 1px solid gray">
-  <mat-card *ngFor="let videos of videosGalery; index as i;">
-    <mat-card-header>
-      <div mat-card-avatar class="example-header-image"></div>
-      <mat-card-title>Video {{i+1}}</mat-card-title>
-<!--      <mat-card-subtitle>Dog Breed</mat-card-subtitle>-->
-    </mat-card-header>
-    <img mat-card-image src="https://th.bing.com/th/id/OIP.NqW-FbGXqPQqF628Iw1pbAHaFj?pid=ImgDet&rs=1" alt="Photo of a Shiba Inu">
-    <div class="d-flex justify-content-between">
-      <mat-icon>skip_previous</mat-icon>
-      <mat-icon>play_arrow</mat-icon>
-      <mat-icon>skip_next</mat-icon></div>
-    <mat-card-content>
-    </mat-card-content>
-  </mat-card>
+<div class="container">
+  <h4 class="mt-3 p-2">Galería de Videos</h4>
+  <mat-divider></mat-divider>
+  <div class="container_videos mt-3">
+    <mat-card *ngFor="let videos of videosGalery; index as i;">
+      <mat-card-header>
+        <div mat-card-avatar class="example-header-image"></div>
+        <mat-card-title>Palabra:  {{i + 1}}</mat-card-title>
+        <!--      <mat-card-subtitle>Dog Breed</mat-card-subtitle>-->
+      </mat-card-header>
+      <div class="d-flex justify-content-between">
+        <video mat-card-image width="100%" height="200px" src="" controls controlslist></video>
+      </div>
+      <mat-card-content>
+      </mat-card-content>
+    </mat-card>
+  </div>
 </div>
-<div>
-</div>
+
+
+
