--- a/src/app/Components/dash-board/dash-board.component.html
+++ b/src/app/Components/dash-board/dash-board.component.html
@@ -1,18 +1,18 @@
-<div class="container">
-  <h3 class="mt-2 p-2">Diccionario</h3>
-  <mat-divider></mat-divider>
+<div class="container-fluid">
+  <h3 class="mt-1 p-1 text-center">Diccionario</h3>
   <div class="container">
+    <mat-divider></mat-divider>
     <div class="row">
-      <div class="col-lg-4">
+      <div class="col-lg-3 col-md-4">
         <!--Header-->
-        <app-dash-board-header (wordFinding)="onSearch($event)" (clickingButton)="onClickButton()"></app-dash-board-header>
+        <app-dash-board-header (wordFinding)="onSearch($event)" ></app-dash-board-header>
         <!--Content-->
-        <app-dash-board-ifo [searching]="input_search" [Letter]="indexWord" [itemList]="wordResults" [cEntry]="entry"></app-dash-board-ifo>
+        <app-dash-board-ifo [letter]="indexWord" [itemList]="wordResults" [cEntry]="entry" (backClick)="onClickButton($event)"></app-dash-board-ifo>
       </div>
-      <div class="col-lg-8">
-        <!--Main Content-->
-        <app-dash-board-content ></app-dash-board-content>
-      </div>
+        <div class="col-lg-9 col-md-8">
+          <!--Main Content-->
+          <app-dash-board-content [selectionClicked]="input_search" [wordsArray]="wordArray"></app-dash-board-content>
+        </div>
     </div>
   </div>
 </div>
