--- a/src/app/Components/dash-board/dash-board-content/dash-board-content.component.html
+++ b/src/app/Components/dash-board/dash-board-content/dash-board-content.component.html
@@ -1,17 +1,41 @@
 <!-- Initial Content -->
-<div class="mt-3 welcome">
-  <mat-card class="example-card mat-elevation-z0">
-    <mat-card-title>
-      Reseña
-    </mat-card-title>
-    <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
-    <mat-card-content>
-      <p>
-        The Shiba Inu is the smallest of the six original and distinct spitz breeds of dog from Japan.
-        A small, agile dog that copes very well with mountainous terrain, the Shiba Inu was originally
-        bred for hunting.
-      </p>
-    </mat-card-content>
+
+<div class="mt-3 welcome" *ngIf="!selectClick">
+  <div class="card bg-dark text-white" [@fade]>
+    <img src="https://uruguayeduca.anep.edu.uy/sites/default/files/2019-08/diccionario_0.jpg" class="card-img card-opacity" alt="Photo of a Shiba Inu">
+    <div class="card-img-overlay">
+      <h3 class="card-title">Reseña del Diccionario</h3>
+      <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium aliquid architecto at commodi inventore laudantium magni, modi nam nihil non odio officia porro ratione repellendus voluptatum? Debitis earum laudantium optio?</p>
+      <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur corporis doloremque eius exercitationem libero mollitia praesentium vitae! Ad debitis ipsum, laudantium magnam magni maiores minima odit officia placeat similique voluptatem!</p>
+      <p class="card-text">Last updated 3 mins ago</p>
+    </div>
+  </div>
+<!--  <mat-card class="example-card mat-elevation-z0">-->
+<!--    <mat-card-title>-->
+<!--      Reseña-->
+<!--    </mat-card-title>-->
+<!--    <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">-->
+<!--    <mat-card-content>-->
+<!--      <p>-->
+<!--        The Shiba Inu is the smallest of the six original and distinct spitz breeds of dog from Japan.-->
+<!--        A small, agile dog that copes very well with mountainous terrain, the Shiba Inu was originally-->
+<!--        bred for hunting.-->
+<!--      </p>-->
+<!--    </mat-card-content>-->
+<!--  </mat-card>-->
+</div>
+<div class="welcome mt-3" *ngIf="selectClick">
+  <p id="this"></p>
+  <mat-card class="example-card mat-elevation-z0" *ngFor="let item of wordList">
+<!--    <mat-card-title></mat-card-title>-->
+<!--    <h5>Palabra</h5>-->
+<!--    <p>Palabra : {{item.word}}</p><span>{{item.pos}}</span>-->
+<!--    <h5>Definicion</h5>-->
+<!--    <p>{{item.def}}</p>-->
+<!--    <h5>Ejemplos</h5>-->
+<!--    <p>{{item.eg}}</p>-->
+
   </mat-card>
+
 </div>
 <!-- Search Content -->
