--- a/src/app/Components/dash-board/dash-board-ifo/dash-board-ifo.component.css
+++ b/src/app/Components/dash-board/dash-board-ifo/dash-board-ifo.component.css
@@ -1,15 +1,18 @@
 .form-select-style{
+  width: 100%;
   background-color: #f1f1f1;
-  height: 380px;
   border-bottom: 1px solid;
   border-radius: 7px 7px 0 0;
   border-top: 0;
   border-right: 2px;
   border-left: 2px;
 }
+.form-select-style-up{
+  height: 380px;
+}
 
 .form-select-style option{
-  padding: 10px;
+  /*padding: 10px;*/
 }
 .form-select-style:focus{
   border-bottom: 2px solid mediumblue;
