--- a/src/app/Components/dash-board/dash-board-ifo/dash-board-ifo.component.html
+++ b/src/app/Components/dash-board/dash-board-ifo/dash-board-ifo.component.html
@@ -1,11 +1,12 @@
 <mat-divider></mat-divider>
   <div class="mt-3">
-    <select size="9" style="width: 100%;" class="form-select form-select-style">
-      <option value="{{item}}" (dblclick)="onSelectWord($event)"  *ngFor="let item of itemList | filter:'orth':'$':'id':currentEntry" >{{item}}</option>
+    <select size="9" class="form-select form-select-style form-select-style-up">
+      <option (click)="onSelectWord($event)"  *ngFor="let item of itemList | filter:'orth':'$':'id':currentEntry" >{{item}}</option>
     </select>
   </div>
+  <mat-divider></mat-divider>
   <div class="mt-3">
-    <select size="3" style="width: 100%;" class="form-select"></select>
+    <select size="3" style="width: 100%;" class="form-select form-select-style form-select-style-down"></select>
 </div>
 
 
