--- a/src/app/Components/main-nav/main-nav.component.html
+++ b/src/app/Components/main-nav/main-nav.component.html
@@ -2,51 +2,50 @@
   <mat-sidenav #drawer class="sidenav" fixedInViewport
                [attr.role]="(isHandset$ | async) ? 'dialog' : 'navigation'"
                [mode]="(isHandset$ | async)? 'over': 'side'">
-<!--    <mat-toolbar>-->
-<!--      <h2 class="mx-2 toolbarText">Secciones</h2>-->
-<!--    </mat-toolbar>-->
+    <!--    <mat-toolbar>-->
+    <!--      <h2 class="mx-2 toolbarText">Secciones</h2>-->
+    <!--    </mat-toolbar>-->
 
     <div class="toolbar p-2">
       <img class="imgBg" src="./assets/img/cla_logo.png" alt="">
     </div>
-    <mat-divider></mat-divider>
+    <hr>
     <div class="container mx-3 d-flex align-items-center">
       <mat-icon>segment</mat-icon>
       <h5 class="toolbarHeader">Contenido</h5>
     </div>
 
-    <mat-divider></mat-divider>
+    <hr>
     <div class="container">
-
-      <mat-nav-list [hidden]="isHide">
+      <mat-nav-list>
         <a mat-list-item class="iconCSS" routerLink="/diccionario" href="">
-          <mat-icon style="color: darkblue">menu_book</mat-icon>
+          <mat-icon>menu_book</mat-icon>
           <!--       <mat-icon class="mx-1 iconCss1" aria-hidden="false" aria-label="Diccionary"></mat-icon>-->
           <h5 class="mt-2 mx-3">Diccionario</h5></a>
         <a mat-list-item href="#" class="iconCSS" routerLink="/videos">
-          <mat-icon style="color: red">movies</mat-icon>
+          <mat-icon>movies</mat-icon>
           <!--       <mat-icon class="mx-1 iconCss2" aria-hidden="false" aria-label="Videos"></mat-icon>-->
           <h5 class="mt-2 mx-3">Videos</h5></a>
         <div class="icon">
           <a mat-list-item href="#" class="iconCSS" routerLink="/images">
-            <mat-icon style="color: salmon">image</mat-icon>
+            <mat-icon>image</mat-icon>
             <!--         <mat-icon class="mx-1 iconCss3" aria-hidden="false" aria-label="Image"></mat-icon>-->
             <h5 class="mt-2 mx-3">Imágenes</h5></a>
         </div>
         <a mat-list-item href="#" class="iconCSS" routerLink="/info">
-          <mat-icon color="primary">info</mat-icon>
+          <mat-icon>info</mat-icon>
           <!--      <mat-icon class="mx-1 iconCss4" aria-hidden="false" aria-label="Info"></mat-icon>-->
           <h5 class="mt-2 mx-3">Información</h5></a>
         <a mat-list-item href="#" class="iconCSS" routerLink="/estadistics">
-          <mat-icon style="color: green">leaderboard</mat-icon>
+          <mat-icon>leaderboard</mat-icon>
           <!--      <mat-icon class="mx-1 iconCss5 " aria-hidden="false" aria-label="Estadistics"></mat-icon>-->
           <h5 class="mt-2 mx-3">Estadisticas</h5></a>
         <a mat-list-item href="" class="iconCSS" routerLink="/help">
-          <mat-icon color="primary">help</mat-icon>
+          <mat-icon>help</mat-icon>
           <!--      <mat-icon class="mx-1 iconCss6"  aria-hidden="false" aria-label="Help"></mat-icon>-->
           <h5 class="mt-2 mx-3">Ayuda</h5></a>
         <a mat-list-item href="" class="iconCSS">
-          <mat-icon style="color: darkred">close</mat-icon>
+          <mat-icon>close</mat-icon>
           <!--       <mat-icon class="mx-1 iconCss7"   aria-hidden="false" aria-label="Exit"></mat-icon>-->
           <h5 class="mt-2 mx-3">Salir</h5>
         </a>
@@ -55,18 +54,22 @@
   </mat-sidenav>
   <mat-sidenav-content>
     <mat-toolbar color="primary">
-      <button
-        type="button"
-        aria-label="Toggle sidenav"
-        mat-icon-button
-        (click)="drawer.toggle()"
-      >
+      <button type="button" aria-label="Toggle sidenav" mat-icon-button (click)="drawer.toggle()">
         <mat-icon>menu</mat-icon>
-        <!--        <mat-icon class="iconCss"></mat-icon>-->
       </button>
-      <div class="d-flex justify-content-between">
-        <span class="webTitle">Diccionario B&aacute;sico Escolar 5.0</span>
-      </div>
+      <span class="webTitle">Diccionario B&aacute;sico Escolar 5.0</span>
+      <span class="example-spacer"></span>
+      <button mat-icon-button [matMenuTriggerFor]="menu">
+        <mat-icon>more_vert</mat-icon>
+      </button>
+      <mat-menu #menu="matMenu">
+        <button mat-menu-item>
+          <mat-icon>manage_search</mat-icon>
+          <mat-checkbox color="primary" (change)="onActivateAdvSearch()" labelPosition="before">Activar B&uacute;squeda
+            avanzada
+          </mat-checkbox>
+        </button>
+      </mat-menu>
     </mat-toolbar>
     <!-- Add Content Here -->
     <router-outlet></router-outlet>
