--- a/src/app/Components/show-videos/show-videos.component.css
+++ b/src/app/Components/show-videos/show-videos.component.css
@@ -6,8 +6,8 @@
 
 @media screen and (max-width: 640px){
   .container_videos{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
+    display: grid;
+    grid-template-columns: auto;
+
   }
 }
