--- a/src/app/Components/show-videos/show-videos.component.html
+++ b/src/app/Components/show-videos/show-videos.component.html
@@ -1,19 +1,13 @@
 <div class="container">
   <h4 class="mt-3 p-2">Galería de Videos</h4>
   <mat-divider></mat-divider>
-  <div class="container_videos mt-3">
-    <mat-card *ngFor="let videos of videosGalery; index as i;">
-      <mat-card-header>
-        <div mat-card-avatar class="example-header-image"></div>
-        <mat-card-title>Palabra:  {{i + 1}}</mat-card-title>
-        <!--      <mat-card-subtitle>Dog Breed</mat-card-subtitle>-->
-      </mat-card-header>
-      <div class="d-flex justify-content-between">
+  <div class="row" [@slow-entry]>
+    <div class="col-lg-3 col-md-4 col-sm-6" *ngFor="let videos of videosGalery">
+      <mat-card class="mat-elevation-z0" >
+        <mat-card-header>Hola</mat-card-header>
         <video mat-card-image width="100%" height="200px" src="" controls controlslist></video>
-      </div>
-      <mat-card-content>
-      </mat-card-content>
-    </mat-card>
+      </mat-card>
+    </div>
   </div>
 </div>
 
