--- a/src/app/Components/dash-board/dash-board-header/dash-board-header.component.css
+++ b/src/app/Components/dash-board/dash-board-header/dash-board-header.component.css
@@ -13,6 +13,11 @@ mat-form-field{
 .myPanel{
   width: 400px;
 }
-.myBtn{
-
+.toggle-css{
+  width: 100%;
+}
+mat-button-toggle {
+  width: 38px;
+  color: black;
+  font-size: 15px;
 }
