--- a/src/app/Components/dash-board/dash-board-ifo/dash-board-ifo.component.html
+++ b/src/app/Components/dash-board/dash-board-ifo/dash-board-ifo.component.html
@@ -1,12 +1,15 @@
 <mat-divider></mat-divider>
   <div class="mt-3">
-    <select size="9" class="form-select form-select-style form-select-style-up">
-      <option (click)="onSelectWord($event)"  *ngFor="let item of itemList | filter:'orth':'$':'id':currentEntry" >{{item}}</option>
+    <select size="9" class="form-select bg-light" #mySelect>
+      <option class="p-1" (click)="onSelectWord($event)" *ngFor="let item of itemList | filter:'orth':'$':'id':currentEntry; index as i" value="{{item}}">
+        {{item}}
+      </option>
+<!--      <option *ngFor="let item of itemList | json" value="{{item}}" >{{item}}</option>-->
     </select>
   </div>
   <mat-divider></mat-divider>
   <div class="mt-3">
-    <select size="3" style="width: 100%;" class="form-select form-select-style form-select-style-down"></select>
+    <select size="3" style="width: 100%;" class="form-select bg-light"></select>
 </div>
 
 
