--- a/src/app/Components/show-videos/show-videos.component.html
+++ b/src/app/Components/show-videos/show-videos.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <h4 class="mt-3 p-2">Galería de Videos</h4>
   <mat-divider></mat-divider>
-  <div class="row" [@slow-entry]>
+  <div class="row">
     <div class="col-lg-3 col-md-4 col-sm-6" *ngFor="let videos of videosGalery">
       <mat-card class="mat-elevation-z0" >
         <mat-card-header>Hola</mat-card-header>
