Modos de búsqueda, completados y funcionales

--- a/src/app/Components/dash-board/dash-board-content/dash-board-content.component.html
+++ b/src/app/Components/dash-board/dash-board-content/dash-board-content.component.html
@@ -2,7 +2,9 @@
 
   <mat-card [hidden]="!hideSelect" class="hiddenSelect mat-elevation-z2 mt-3">
     <mat-card-header>
-      <h5 class="text-center">Criterios de b&uacute;squeda</h5>
+      <h5 class="text-bold">
+        <span>Criterios de b&uacute;squeda</span>
+      </h5>
     </mat-card-header>
     <mat-divider></mat-divider>
     <mat-form-field appearance="legacy">
