--- a/src/app/Components/alphabeth/alphabeth.component.html
+++ b/src/app/Components/alphabeth/alphabeth.component.html
@@ -1,36 +1,38 @@
 <div class="row">
   <div class="col-md">
-    <table class="table">
-      <thead></thead>
-      <tr class="table-css" #trow (click)="onTestTable($event)">
-        <td>A</td>
-        <td>B</td>
-        <td>C</td>
-        <td>D</td>
-        <td>E</td>
-        <td>F</td>
-        <td>G</td>
-        <td>H</td>
-        <td>I</td>
-        <td>J</td>
-        <td>K</td>
-        <td>L</td>
-        <td>M</td>
-        <td>N</td>
-        <td>Ñ</td>
-        <td>O</td>
-        <td>P</td>
-        <td>Q</td>
-        <td>R</td>
-        <td>S</td>
-        <td>T</td>
-        <td>U</td>
-        <td>V</td>
-        <td>W</td>
-        <td>X</td>
-        <td>Y</td>
-        <td>Z</td>
-      </tr>
-    </table>
+    <div class="table-responsive mat-elevation-z3 rounded">
+      <table class="table text-center">
+        <thead></thead>
+        <tr class="bg-secondary bg-gradient" #trow (click)="onTestTable($event)">
+          <td>A</td>
+          <td>B</td>
+          <td>C</td>
+          <td>D</td>
+          <td>E</td>
+          <td>F</td>
+          <td>G</td>
+          <td>H</td>
+          <td>I</td>
+          <td>J</td>
+          <td>K</td>
+          <td>L</td>
+          <td>M</td>
+          <td>N</td>
+          <td>Ñ</td>
+          <td>O</td>
+          <td>P</td>
+          <td>Q</td>
+          <td>R</td>
+          <td>S</td>
+          <td>T</td>
+          <td>U</td>
+          <td>V</td>
+          <td>W</td>
+          <td>X</td>
+          <td>Y</td>
+          <td>Z</td>
+        </tr>
+      </table>
+    </div>
   </div>
 </div>
